fix: rever for overflow in 6fb11d22162a853b3e6e537d5859cd481bea887a6fb11d22162a853b3e6e537d5859cd481bea887a6fb11d22162a853b3e6e537d5859cd481bea887a
The overflow was breaking on smaller viewports and drawing unnecessary scrollbars on page toc. Check https://frappecloud.com/docs/local-fc-setup#introduction

--- a/wiki/public/scss/wiki.scss
+++ b/wiki/public/scss/wiki.scss
@@ -332,7 +332,6 @@ textarea.wiki-content {
 		ul {
 			padding-bottom: 0;
 			margin-bottom: 0;
-			overflow-y: scroll;
 		}
 
 		.h5 {
